--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-*/*/classes_gen/
-*/*/source_gen/
-*/*/source_gen.caches/
+solutions/*/classes_gen/
+solutions/*/source_gen/
+solutions/*/source_gen.caches/
+languages/*/classes_gen/
+languages/*/source_gen/
+languages/*/source_gen.caches/
+tests/*/classes_gen/
+tests/*/source_gen/
+tests/*/source_gen.caches/
 *.iws
